# Mimi-computer-graphics

./: README.md
2023150182_刘可新_可执行文件/shaders/: fshader2.glsl
2023150182_刘可新_源代码/: CMakeLists.txt  MeshPainter.cpp  TriMesh.cpp  main.cpp
2023150182_刘可新_源代码/include/: BALLS.h  Camera.h  MeshPainter.h  TriMesh.h
2023150182_刘可新_源代码/shaders/: fshader.glsl  vshader.glsl
